# primer-proyecto---edd

./: CMakeLists.txt  Makefile  README.md  main.cpp
data/: corrupto.csv  productos-35.csv  productos.csv  vacio.csv
include/: ArbolAVL.h  ArbolB.h  ArbolBPlus.h  Catalogo.h  Producto.h
output/: arbolB.dot  arbolBP.dot  avl.dot
src/: Catalogo.cpp  Producto.cpp
